--- a/Diamon/app/src/main/res/layout/activity_profile.xml
+++ b/Diamon/app/src/main/res/layout/activity_profile.xml
@@ -34,7 +34,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profil_img"
             android:layout_height="100dp"
-            android:src="@drawable/prof"
+            android:src="@drawable/ic_account"
             android:layout_width="100dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
