--- a/Diamon/app/src/main/res/drawable/border_raduis_top.xml
+++ b/Diamon/app/src/main/res/drawable/border_raduis_top.xml
@@ -4,13 +4,13 @@
         <shape
             android:shape="rectangle">
             <!--<stroke android:width="1dp" android:color="#F6F5F5" />-->
-            <stroke android:width="1dp" android:color="@color/neuwhite" />
-            <solid android:color="@color/neuwhite" />
+            <stroke android:width="1dp" android:color="@color/white" />
+            <solid android:color="@color/white" />
             <corners
                 android:bottomLeftRadius="0dp"
                 android:bottomRightRadius="0dp"
-                android:topLeftRadius="20dp"
-                android:topRightRadius="20dp" />
+                android:topLeftRadius="40dp"
+                android:topRightRadius="40dp" />
 
         </shape>
     </item>
@@ -21,10 +21,10 @@
             <corners
                 android:bottomLeftRadius="0dp"
                 android:bottomRightRadius="0dp"
-                android:topLeftRadius="20dp"
-                android:topRightRadius="20dp" />
-            <stroke android:width="1dp" android:color="@color/neuwhite" />
-            <solid android:color="@color/neuwhite" />
+                android:topLeftRadius="40dp"
+                android:topRightRadius="40dp" />
+            <stroke android:width="1dp" android:color="@color/white" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
 
