--- a/Diamon/app/src/main/res/layout/activity_page_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_page_main.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:padding="0dp"
                 android:layout_marginTop="5dp"
-                android:text="12"/>
+                android:text="0"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -114,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="3dp"
-                android:text="$2000.125"
+                android:text="$0"
                 android:textSize="30dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:text="$0,0034"
+                android:text="$0"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -153,7 +153,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:drawableLeft="@drawable/ic_trend_up"
-                android:text=" +12,8%"
+                android:text=" 0"
                 android:textColor="@color/vert1"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -177,7 +177,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/valeur_txt"
                 app:layout_constraintVertical_bias="0.062" />
 
-           <!-- <soup.neumorphism.NeumorphButton
+           <soup.neumorphism.NeumorphButton
                 android:id="@+id/btn_graph"
                 style="@style/Widget.Neumorph.Button"
                 android:layout_width="wrap_content"
@@ -187,7 +187,7 @@
                 android:text="Graph"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:neumorph_shapeType="basin" />-->
+                app:neumorph_shapeType="basin" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -259,70 +259,16 @@
         android:background="@drawable/border_raduis_top"
         android:weightSum="5">
 
-        <soup.neumorphism.NeumorphCardView
-            style="@style/Widget.Neumorph.ImageView"
-            android:id="@+id/imageView"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/id_recy_pro_2"
             android:layout_width="match_parent"
+            android:layout_weight="3.5"
             android:layout_height="0dp"
-            android:layout_weight="4"
-            android:layout_margin="0dp"
-            app:neumorph_shapeType="flat">
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:weightSum="4"/>
 
-            <com.jjoe64.graphview.GraphView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/neuwhite"
-                android:id="@+id/graph"/>
-
-        </soup.neumorphism.NeumorphCardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp"
-            android:weightSum="4"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:text="H"
-                android:textStyle="bold"
-                android:backgroundTint="#A5D3F6"
-                android:layout_margin="1dp"
-               />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:backgroundTint="#A5D3F6"
-                android:textStyle="bold"
-                android:text="D"
-                android:layout_margin="1dp"
-               />
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:text="W"
-                android:textStyle="bold"
-                android:backgroundTint="#A5D3F6"
-                android:layout_margin="1dp"
-                />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:backgroundTint="#A5D3F6"
-                android:textStyle="bold"
-                android:text="M"
-                android:layout_margin="1dp"
-                />
-        </LinearLayout>
 
     </LinearLayout>
 
