--- a/Diamon/app/src/main/res/layout/add_popup.xml
+++ b/Diamon/app/src/main/res/layout/add_popup.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#DADBDF"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
 
@@ -38,12 +38,11 @@
             android:id="@+id/id_type_provider"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="Provider"
-            android:background="@drawable/border_raduis"
             android:inputType="text" />
 
         <Spinner
@@ -51,10 +50,10 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:ems="10"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/border_raduis"
+
             android:hint="Country"
             android:inputType="text" />
 
@@ -63,12 +62,11 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
             android:ems="10"
             android:hint="Town"
-            android:background="@drawable/border_raduis"
             android:inputType="text" />
 
         <EditText
@@ -76,26 +74,38 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
             android:ems="10"
-            android:background="@drawable/border_raduis"
             android:hint="Local Mobile Money"
             android:inputType="text" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:weightSum="5">
+
+            <Spinner
+                android:id="@+id/id_code_pays"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="45dp" />
+
         <EditText
             android:id="@+id/id_phone"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="5dp"
             android:ems="10"
-            android:background="@drawable/border_raduis"
             android:hint="WhatsApp Phone number"
             android:inputType="phone" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
