--- a/Diamon/app/src/main/res/layout/activity_page_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_page_main.xml
@@ -83,14 +83,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            app:neumorph_shapeType="flat"
-            >
-            <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@drawable/border_raduis_20"
-        android:gravity="center">
+            app:neumorph_shapeType="flat">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@drawable/border_raduis_20"
+            android:gravity="center">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -256,13 +256,12 @@
         android:layout_height="0dp"
         android:layout_weight="4.7"
         android:orientation="vertical"
-        android:background="@drawable/border_raduis_top"
         android:weightSum="5">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/id_recy_pro_2"
             android:layout_width="match_parent"
-            android:layout_weight="3.5"
+            android:layout_weight="5"
             android:layout_height="0dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="5dp"
