--- a/Diamon/app/src/main/res/layout/shime_row.xml
+++ b/Diamon/app/src/main/res/layout/shime_row.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/neuwhite"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:cardCornerRadius="0dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +18,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/id_layout"
             android:layout_width="match_parent"
-            android:background="@color/neuwhite"
-            android:layout_marginBottom="0.7dp"
+            android:background="@color/white"
             android:layout_height="match_parent">
 
             <LinearLayout
@@ -33,28 +31,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteY="0dp">
 
-                <ImageView
-                    android:id="@+id/id_rank"
-                    android:layout_width="20dp"
-                    android:layout_height="25dp"
-                   />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/id_type_img"
-                    android:layout_width="50dp"
+                    android:layout_width="60dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_account" />
+
+                    android:src="@drawable/ic_shime_img"
+                     />
 
             </LinearLayout>
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/id_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="140dp"
+                android:layout_height="25dp"
                 android:layout_marginStart="5dp"
-                android:text="TextView"
                 android:textSize="15dp"
                 android:textStyle="bold"
+                android:background="#BFBDBD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -63,12 +58,12 @@
                 app:layout_constraintVertical_bias="0.2" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/id_certified"
+                android:id="@+id/id_rank"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="11dp"
-                android:src="@drawable/ic_sucess"
+
                 app:layout_constraintStart_toEndOf="@+id/id_name"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,45 +72,34 @@
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
+                android:src="@drawable/ic_shime_img"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/flag_togo" />
-
-            <TextView
+              />
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/id_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="15dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="5dp"
                 android:textSize="12dp"
-                android:text="Buyer &amp; Seller"
+                android:background="#BFBDBD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/linearLayout"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/id_txt_p"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="15dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="5dp"
-                android:text="Pay Agent:"
                 android:textSize="12dp"
+                android:background="#BFBDBD"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/id_type" />
-
-            <TextView
-                android:id="@+id/id_lcl_pay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="1dp"
-                android:layout_marginBottom="5dp"
-                android:text="Mobile Money"
-                android:textSize="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/id_txt_p" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
