--- a/Diamon/app/src/main/res/layout/activity_page_main.xml
+++ b/Diamon/app/src/main/res/layout/activity_page_main.xml
@@ -257,13 +257,21 @@
         android:layout_weight="4.7"
         android:orientation="vertical"
         android:weightSum="5">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:text="Top Users"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+           />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/id_recy_pro_2"
             android:layout_width="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="4.5"
             android:layout_height="0dp"
-            android:layout_marginTop="15dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:weightSum="4"/>
