--- a/Diamon/app/src/main/res/drawable/border_raduis.xml
+++ b/Diamon/app/src/main/res/drawable/border_raduis.xml
@@ -3,8 +3,8 @@
     <item>
         <shape
             android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#F6F5F5" />
-            <solid android:color="@color/neuwhite" />
+            <stroke android:width="1dp" android:color="#0C98ADF8" />
+            <solid android:color="#0C98ADF8" />
             <corners
                 android:radius="10dp">
             </corners>
@@ -18,8 +18,8 @@
             <corners
                 android:radius="10dp">
             </corners>
-            <stroke android:width="1dp" android:color="#F6F5F5" />
-            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="#0C98ADF8" />
+            <solid android:color="#0C98ADF8" />
         </shape>
     </item>
 
